# Cosmos

./: .gitignore  .gitmodules  CMakeLists.txt
include/cosmos/: cosmos.hpp  expression.hpp  format.hpp  interpreter.hpp  name.hpp  operators.hpp  parser.hpp  statement.hpp  token.hpp  tokenizer.hpp  workspace.hpp
include/cosmos/evaluation/: interpreter.hpp  operators.hpp
include/cosmos/release/: quark.hpp
release/address/: miner.cpp  miner.hpp
release/pow/: pow.cpp
release/quark/: quark.cpp
release/temp/: temp.cpp
src/cosmos/: expression.cpp  interpreter.cpp  statement.cpp
test/: CMakeLists.txt  testLib.cpp
